--- a/app/views/shared/_formraces.html.erb
+++ b/app/views/shared/_formraces.html.erb
@@ -8,7 +8,7 @@
         <% end %>
         <%= f.input :name, label: 'Nom de la course:'%>
         <%= f.input :city_name, label: "Ville:", input_html: { class: "new-race-city-input" } %>
-        <%= f.input  :dates, as: :date, label: "Date de la course:" %>
+        <%= f.input  :dates, as: :date, html5: true, label: "Date de la course:" %>
         <%= f.input :description, label: 'Informations:'%>
         <%= f.input  :source_url, label: "Site-web de la course:" %>
         <%= f.input :photo, label: "Photo:", class: "btn btn-primary blue-nav" %>
