--- a/app/views/swim_races/show.html.erb
+++ b/app/views/swim_races/show.html.erb
@@ -9,7 +9,9 @@
             <div class="race-infos">
               <h2>Informations:</h2>
               <p><strong>Ville: </strong><%= @swim_race.city_name %></p>
-              <p><strong>Date de la course: </strong> <%= @swim_race.dates %></p>
+              <% m = @swim_race.dates.strftime("%m").to_i %>
+              <% month = @months[m - 1] %>
+              <p><strong>Date de la course: </strong> <%= @swim_race.dates.strftime("%d #{month} %Y") %></p>
               <p><strong>Description:</strong></p>
               <p class="text-justify"><%= simple_format(@swim_race.description) %></p>
               <button class="btn btn-primary blue-nav"><%= link_to raw('<i class="fas fa-swimmer"></i> Je participe'), @swim_race.source_url, class: "white-color-link"%></button>
