my race have now cards + more info also fixed the background when the sidenavbar is moving and put the links on the whole <li> of the sidenavbar fixed the width of the sign in and log in form

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -75,3 +75,13 @@
 .card-link:hover {
   opacity: 0.05;
 }
+
+.my-race-image {
+  width: 30%;
+}
+
+
+.my-race-infos {
+  width: 70%;
+  left: 30%;
+}
