--- a/app/views/swim_races/show.html.erb
+++ b/app/views/swim_races/show.html.erb
@@ -14,12 +14,16 @@
               <p><strong>Date de la course: </strong> <%= @swim_race.dates.strftime("%d #{month} %Y") %></p>
               <p><strong>Description:</strong></p>
               <p class="text-justify"><%= simple_format(@swim_race.description) %></p>
-              <button class="btn btn-primary blue-nav"><%= link_to raw('<i class="fas fa-swimmer"></i> Je participe'), @swim_race.source_url, class: "white-color-link"%></button>
+              <% if @swim_race.user_id != current_user.id %>
+              <button class="btn btn-primary blue-nav col-xs-12"><%= link_to raw('<i class="fas fa-swimmer"></i> Je participe'), @swim_race.source_url, class: "white-color-link"%></button>
+              <% else %>
+              <button class="btn btn-info col-xs-12"> <%= link_to raw('<i class="fas fa-edit"></i> Modifier la course'), edit_swim_race_path(@swim_race), class: "white-color-link" %></button>
+              <% end %>
             </div>
             <% if !current_user.nil? %>
               <% if @swim_race.user_id == current_user.id %>
                 <div class="icons">
-                <%= link_to raw('<i class="fas fa-edit"></i>'), edit_swim_race_path(@swim_race), class: "icon-color" %>
+
                 <%= link_to raw('<i class="far fa-trash-alt"></i>'), swim_race_path(@swim_race),
                     method: :delete,
                     data: { confirm: "Are you sure?" }, class: "icon-color" %>
@@ -50,9 +54,9 @@
             <% end %>
             <% if !current_user.nil? %>
               <% if @swim_race.user_id == current_user.id %>
-                <button class="btn btn-secondary grey"><%= link_to raw('<i class="fas fa-plus-circle"></i> Ajouter des épreuves'),  new_swim_race_swim_event_path(@swim_race), class: "white-color-link" %>
+                <button class="btn btn-secondary grey col-xs-12"><%= link_to raw('<i class="fas fa-plus-circle"></i> Ajouter des épreuves'),  new_swim_race_swim_event_path(@swim_race), class: "white-color-link" %>
                 </button>
-                <button class="btn btn-info"><%= link_to raw('<i class="fas fa-edit"></i> Modifier des épreuves'), edit_swim_race_swim_event_path(@swim_race), class: "white-color-link" %>
+                <button class="btn btn-info col-xs-12"><%= link_to raw('<i class="fas fa-edit"></i> Modifier les épreuves'), edit_swim_race_swim_event_path(@swim_race), class: "white-color-link" %>
                 </button>
               <% end %>
             <% end %>
