--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -22,6 +22,9 @@
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <div class="race-container">
+          <% if !@swim_races.any? %>
+            <p class="text-center">Aucune course enregistrée.</p>
+          <% end %>
           <%= render 'shared/cards', swim_race: @swim_races %>
         </div>
       </div>
