--- a/app/views/swim_races/show.html.erb
+++ b/app/views/swim_races/show.html.erb
@@ -14,19 +14,21 @@
               <p><strong>Date de la course: </strong> <%= @swim_race.dates.strftime("%d #{month} %Y") %></p>
               <p><strong>Description:</strong></p>
               <p class="text-justify"><%= simple_format(@swim_race.description) %></p>
-              <% if @swim_race.user_id != current_user.id %>
-              <button class="btn btn-primary blue-nav col-xs-12"><%= link_to raw('<i class="fas fa-swimmer"></i> Je participe'), @swim_race.source_url, class: "white-color-link"%></button>
-              <% else %>
-              <button class="btn btn-info col-xs-12"> <%= link_to raw('<i class="fas fa-edit"></i> Modifier la course'), edit_swim_race_path(@swim_race), class: "white-color-link" %></button>
+              <% if !current_user.nil? %>
+                <% if @swim_race.user_id != current_user.id %>
+                  <button class="btn btn-primary blue-nav col-xs-12"><%= link_to raw('<i class="fas fa-swimmer"></i> Je participe'), @swim_race.source_url, class: "white-color-link"%></button>
+                <% else %>
+                  <button class="btn btn-info col-xs-12"> <%= link_to raw('<i class="fas fa-edit"></i> Modifier la course'), edit_swim_race_path(@swim_race), class: "white-color-link" %></button>
+                <% end %>
               <% end %>
             </div>
             <% if !current_user.nil? %>
               <% if @swim_race.user_id == current_user.id %>
                 <div class="icons">
 
-                <%= link_to raw('<i class="far fa-trash-alt"></i>'), swim_race_path(@swim_race),
-                    method: :delete,
-                    data: { confirm: "Are you sure?" }, class: "icon-color" %>
+                <i id="delete-race-icon" class="far fa-trash-alt icon-color"></i>
+                <%= link_to "", swim_race_path(@swim_race),
+                    method: :delete, id: "delete-link", class: "hidden" %>
                 </div>
               <% end %>
             <% end %>
@@ -45,9 +47,9 @@
                 <p class="text-justify"><%= simple_format(event.comment) %></p>
                 <% if !current_user.nil? %>
                   <% if @swim_race.user_id == current_user.id %>
-                    <%= link_to raw('<i class="far fa-trash-alt"></i> Supprimer'), swim_race_swim_event_path(@swim_race, event),
-                                      method: :delete,
-                                      data: { confirm: "Are you sure?" } %>
+                  <i id="delete-event-icon" class="far fa-trash-alt icon-color"></i>
+                    <%= link_to "", swim_race_swim_event_path(@swim_race, event),
+                        method: :delete, class: "hidden" %>
                   <% end %>
                 <% end %>
               </div>
