--- a/app/assets/stylesheets/components/_showrace.scss
+++ b/app/assets/stylesheets/components/_showrace.scss
@@ -27,6 +27,7 @@
 
 .event-box {
   border-radius: 0.2em;
+  position: relative;
   margin-bottom: 0.2em;
   padding: 0.5em;
   box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
@@ -48,4 +49,13 @@
   position: absolute;
   top: 1%;
   right: 5%;
+  cursor: pointer;
+}
+
+
+.icon-position-show {
+  position: absolute;
+  top: 10%;
+  right: 2%;
+  cursor: pointer;
 }
