--- a/app/views/swim_races/my_races.html.erb
+++ b/app/views/swim_races/my_races.html.erb
@@ -39,7 +39,7 @@
                 <%= link_to raw('<i class="fas fa-edit"></i>'), swim_race_path(swim_race.id), class: "icon-color" %>
                 <i id="delete-race-icon" class="far fa-trash-alt icon-color"></i>
                 <%= link_to "", swim_race_path(swim_race),
-                    method: :delete, id: "delete-link", class: "hidden" %>
+                    method: :delete, id: "delete-race-link", class: "hidden" %>
                 </div>
               <% end %>
               </div>
