--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -48,6 +48,10 @@
   text-decoration: none;
 }
 
+.navbar-wagon-link:active {
+    text-decoration: none;
+  }
+
 /* Dropdown menu */
 .navbar-wagon-dropdown-menu {
   margin-top: 15px;
