--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -25,7 +25,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 70px);
+  height:100vh;
+  min-height: calc(100vh - 70px);
 }
 
 .top-left {
