change delete icon and city name on my_races

--- a/app/views/swim_races/_infowindow.html.erb
+++ b/app/views/swim_races/_infowindow.html.erb
@@ -1,6 +1,7 @@
 <p>Course: <%= swim_race.name %></p>
 <p>Ville: <%= swim_race.city_name %></p>
 <p>Date: <%= swim_race.dates %></p>
+<p>Plus d'infos: <%= swim_race.source_url %></p>
 <p>Epreuves:</p>
 <ul>
 <% events = swim_race.swim_events %>
