--- a/app/views/swim_races/show.html.erb
+++ b/app/views/swim_races/show.html.erb
@@ -24,7 +24,7 @@
               <% if @swim_race.user_id == current_user.id %>
                 <div class="icons">
 
-                <i id="delete-race-icon" class="far fa-trash-alt icon-color"></i>
+                <i id="delete-race-icon" class="fas fa-times-circle icon-color"></i>
                 <%= link_to "", swim_race_path(@swim_race),
                     method: :delete, id: "delete-race-link", class: "hidden" %>
                 </div>
@@ -47,7 +47,7 @@
                 <% if !current_user.nil? %>
                   <% if @swim_race.user_id == current_user.id %>
 
-                    <i id="delete-event-icon" class="far fa-trash-alt icon-color icon-position-show "></i>
+                    <i id="delete-event-icon" class="fas fa-times-circle icon-color icon-position-show "></i>
                     <%= link_to "", swim_race_swim_event_path(@swim_race, event),
                         method: :delete, id: "delete-event-link", class: "hidden" %>
 
