--- a/app/views/swim_races/my_races.html.erb
+++ b/app/views/swim_races/my_races.html.erb
@@ -25,7 +25,8 @@
                 </div>
                 <div class="card-name">
                   <h2><%= swim_race.name %>  </h2>
-                  <p><i class="fas fa-map-marker-alt"></i> <%= swim_race.city_name %></p>
+                  <% city = Geocoder.search(swim_race.city_name).first.city %>
+                  <p><i class="fas fa-map-marker-alt"></i> <%= city %></p>
                 </div>
                 <div class="card-events">
                   <ul class="list-inline">
@@ -37,7 +38,7 @@
                 <% if swim_race.user_id == current_user.id %>
                 <div class="icons">
                 <%= link_to raw('<i class="fas fa-edit"></i>'), swim_race_path(swim_race.id), class: "icon-color" %>
-                <i id="delete-race-icon" class="far fa-trash-alt icon-color"></i>
+                <i id="delete-race-icon" class="fas fa-times-circle icon-color"></i>
                 <%= link_to "", swim_race_path(swim_race),
                     method: :delete, id: "delete-race-link", class: "hidden" %>
                 </div>
