changed the name of the app to eaulibre

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner" style="background-image: linear-gradient(rgba(100,100,100,0.1),rgba(100,100,100,0.1)), url(https://res.cloudinary.com/dzxrdf9za/image/upload/v1553680442/eau%20libre/photo_landing_page10_black.jpg);">
   <div class="container top-left offset-xs-6 offset-md-1">
-    <h1>Ôlibre</h1>
+    <h1>Eau libre</h1>
     <p>Trouve les courses de natation en eau libre près de toi</p>
     <div class="search-form-home">
       <div class="row">
