hide price field

--- a/app/views/swim_races/show.html.erb
+++ b/app/views/swim_races/show.html.erb
@@ -40,7 +40,7 @@
                 <br>
                 <div class="space-between">
                   <p><strong>Distance: </strong><%= event.distance %> km</p>
-                  <p><strong>Prix: </strong><%= event.price %> euros</p>
+                  <!-- <p><strong>Prix: </strong><%= event.price %> euros</p> -->
                 </div>
                 <p><strong>Informations de l'épreuve:</strong></p>
                 <p class="text-justify"><%= simple_format(event.comment) %></p>
