bug favicon à revoir

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <%= favicon_link_tag %>
+    <link rel="shortcut icon" type="image/png" href="http://www.iconarchive.com/show/windows-8-icons-by-icons8/Sports-Swimming-icon.html"/>
+
     <title><%= meta_title %></title>
     <meta name="description" content="<%= meta_description %>">
     <meta property="og:title" content="<%= meta_title %>" />
