--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -30,7 +30,7 @@
 }
 
 .placeholder-home::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255)!important;
 }
 
 .form-new-race {
