change footer color and solved the pundit problem to access show swim race

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #F4F4F4;
+  background: #3e71e1;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -14,8 +14,8 @@
 }
 
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: white;
+  opacity: 0.5;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
