ok we can created and modify events, but the redirect is not working...

--- a/app/views/shared/_formraces.html.erb
+++ b/app/views/shared/_formraces.html.erb
@@ -13,7 +13,7 @@
         <%= f.input  :source_url, label: "Site-web de la course:" %>
         <%= f.input :photo, label: "Photo:", class: "btn btn-primary blue-nav" %>
         <%= f.input :photo_cache, as: :hidden  %>
-        <%= f.submit "Ajouter des épreuves d'Eau Libre", class: "btn btn-primary blue-nav" %>
+        <%= f.submit "Valider la course", class: "btn btn-primary blue-nav" %>
       </div>
   <% end %>
 </div>
