--- a/app/views/swim_races/show.html.erb
+++ b/app/views/swim_races/show.html.erb
@@ -14,10 +14,10 @@
               <p><strong>Date de la course: </strong> <%= @swim_race.dates.strftime("%d #{month} %Y") %></p>
               <p><strong>Description:</strong></p>
               <p class="text-justify"><%= simple_format(@swim_race.description) %></p>
-                <% if current_user.nil? || @swim_race.user_id != current_user.id %>
-                  <button class="btn btn-primary blue-nav col-xs-12"><%= link_to raw('<i class="fas fa-swimmer"></i> Je participe'), @swim_race.source_url, class: "white-color-link"%></button>
+                <% if current_user.nil? || @swim_race.user_id == current_user.id %>
+                   <button class="btn btn-info col-xs-12"> <%= link_to raw('<i class="fas fa-edit"></i> Modifier la course'), edit_swim_race_path(@swim_race), class: "white-color-link" %></button>
                 <% else %>
-                  <button class="btn btn-info col-xs-12"> <%= link_to raw('<i class="fas fa-edit"></i> Modifier la course'), edit_swim_race_path(@swim_race), class: "white-color-link" %></button>
+                  <button class="btn btn-primary blue-nav col-xs-12"><%= link_to raw('<i class="fas fa-swimmer"></i> Je participe'), @swim_race.source_url, class: "white-color-link"%></button>
                 <% end %>
             </div>
             <% if !current_user.nil? %>
@@ -46,11 +46,12 @@
                 <p class="text-justify"><%= simple_format(event.comment) %></p>
                 <% if !current_user.nil? %>
                   <% if @swim_race.user_id == current_user.id %>
-
-                    <i id="delete-event-icon" class="fas fa-times-circle icon-color icon-position-show "></i>
+                    <div class="icons">
+                    <%= link_to raw('<i class="fas fa-edit"></i>'), edit_swim_race_swim_event_path(@swim_race, event), class: "icon-color icon-color" %>
+                    <i id="delete-event-icon" class="fas fa-times-circle icon-color"></i>
                     <%= link_to "", swim_race_swim_event_path(@swim_race, event),
                         method: :delete, id: "delete-event-link", class: "hidden" %>
-
+                    </div>
                   <% end %>
                 <% end %>
               </div>
@@ -58,8 +59,6 @@
             <% if !current_user.nil? %>
               <% if @swim_race.user_id == current_user.id %>
                 <button class="btn btn-secondary grey col-xs-12" style="margin-bottom: 0.25em"><%= link_to raw('<i class="fas fa-plus-circle"></i> Ajouter des épreuves'),  new_swim_race_swim_event_path(@swim_race), class: "white-color-link" %>
-                </button>
-                <button class="btn btn-info col-xs-12"><%= link_to raw('<i class="fas fa-edit"></i>Modifier les épreuves'), edit_swim_race_swim_event_path(@swim_race), class: "white-color-link" %>
                 </button>
               <% end %>
             <% end %>
