--- a/app/views/shared/_formevents.html.erb
+++ b/app/views/shared/_formevents.html.erb
@@ -8,6 +8,7 @@
       <div id="more-infos">
         <%= f.input :comment, label: 'Infos complémentaires:', placeholder: "Ajouter ici les informations concernant les horaires, l'équipement autorisé..."%>
       </div>
+        <%= f.submit "Valider cette épreuve", class: "btn btn-primary blue-nav" %>
     </div>
   <% end %>
 </div>
