--- a/app/views/swim_events/new.html.erb
+++ b/app/views/swim_events/new.html.erb
@@ -3,15 +3,11 @@
     <br>
     <div class="col-xs-12 col-md-8 offset-md-2" >
       <div style="background-color: rgba(255, 255, 255, 0.7); border-radius: 0.25em; padding:1em;">
-        <h2>Ajouter des épreuves à votre course "<%= @swim_race.name %>"</h2>
+        <h2>Ajouter une épreuve à votre course "<%= @swim_race.name %>"</h2>
         <br>
         <%= render 'shared/formevents'%>
       </div>
       <br>
-      <div>
-        <button id="add-distance" class="btn btn-lg btn-secondary grey col-xs-9 col-md-4" style="margin-bottom: 0.25em"><i class="fas fa-plus-circle"></i> Ajouter une épreuve</button>
-        <button id="submit-form" class="btn btn-lg btn-primary blue-nav col-xs-9 col-md-4" style="margin-bottom: 0.25em"><i class="fas fa-check"></i> Valider ces épreuves</button>
-      </div>
     </div>
   <br>
 </div>
