--- a/app/views/shared/_formevents.html.erb
+++ b/app/views/shared/_formevents.html.erb
@@ -1,5 +1,5 @@
 <div id="events-container" class="scroll-overflow-event" style="border-radius: 0.25em;">
-  <%= simple_form_for [@swim_race, @swim_event], remote: true, html: { id: :form_new_event}  do |f| %>
+  <%= simple_form_for [@swim_race, @swim_event], html: { id: :form_new_event}  do |f| %>
     <h5>Epreuve:</h5>
     <div class="form-distance" >
       <div id="distance-prix">
